set up bacground and camera setup

--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -117,6 +117,7 @@ LastLevel=/Game/Maps/GamePlay
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BP_UI_HUD.BP_UI_HUD
+OpenAssetsAtExit=/Game/Maps/GamePlay.GamePlay:PersistentLevel.GamePlay
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -170,6 +171,42 @@ TextBlock.Clipping=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
 CanvasPanel.Layout=True
+PropertyWrapper.Variable=True
+K2Node_VariableGet.Variable=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Navigation=True
+PaperSpriteActor.VirtualTexture=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Cooking=True
+PaperSpriteActor.Replication=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+GamePlay_C.Tick=True
+GamePlay_C.Replication=True
+GamePlay_C.Actor=True
+GamePlay_C.Input=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1106,9 +1143,9 @@ MRUItem1=/Game/Maps/GamePlay
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
-Visual="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
-Object="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
 CanvasPanel="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 
@@ -1117,4 +1154,9 @@ PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.An
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
+RecentlyPlaced=/Game/Sprites/GreyBackGround_Sprite.GreyBackground_Sprite;
+RecentlyPlaced=/Game/Sprites/Background_Sprite.Background_Sprite;
 
