--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,6 +92,7 @@ LastExecutedLaunchName=HOME
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
