Set food score and delay time

--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -119,6 +119,7 @@ LastLevel=/Game/Maps/GamePlay
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BP_UI_HUD.BP_UI_HUD
 OpenAssetsAtExit=/Game/Maps/GamePlay.GamePlay:PersistentLevel.GamePlay
+OpenAssetsAtExit=/Game/Blueprints/FoodColor_Enum.FoodColor_Enum
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -208,6 +209,8 @@ GamePlay_C.Tick=True
 GamePlay_C.Replication=True
 GamePlay_C.Actor=True
 GamePlay_C.Input=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1138,9 +1141,10 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/FoodColor_Enum
-MRUItem1=/Game/Blueprints/BP_UI_HUD
-MRUItem2=/Game/Maps/GamePlay
+MRUItem0=/Game/Blueprints/BP_Food
+MRUItem1=/Game/Blueprints/FoodColor_Enum
+MRUItem2=/Game/Blueprints/BP_UI_HUD
+MRUItem3=/Game/Maps/GamePlay
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
