--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -120,6 +120,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BP_UI_HUD.BP_UI_HUD
 OpenAssetsAtExit=/Game/Maps/GamePlay.GamePlay:PersistentLevel.GamePlay
 OpenAssetsAtExit=/Game/Blueprints/FoodColor_Enum.FoodColor_Enum
+OpenAssetsAtExit=/Game/Blueprints/BP_Food.BP_Food
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -211,6 +212,40 @@ GamePlay_C.Actor=True
 GamePlay_C.Input=True
 UserDefinedEnum.Enumerators=True
 UserDefinedEnum.Description=True
+BP_Food_C.Tick=True
+BP_Food_C.Replication=True
+BP_Food_C.Rendering=True
+BP_Food_C.Collision=True
+BP_Food_C.Actor=True
+BP_Food_C.Input=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Navigation=True
+PaperSpriteComponent.VirtualTexture=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+BP_Block_C.Tick=True
+BP_Block_C.Replication=True
+BP_Block_C.Rendering=True
+BP_Block_C.Collision=True
+BP_Block_C.Actor=True
+BP_Block_C.Input=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -253,6 +288,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=E:/AwesomeTuts/Unreal Engine Tutorial -  Create A 2D Game in Unreal Engine/Snake2D/Content/Maps
@@ -1141,17 +1178,18 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Food
-MRUItem1=/Game/Blueprints/FoodColor_Enum
-MRUItem2=/Game/Blueprints/BP_UI_HUD
-MRUItem3=/Game/Maps/GamePlay
+MRUItem0=/Game/Blueprints/BP_Block
+MRUItem1=/Game/Blueprints/BP_Food
+MRUItem2=/Game/Blueprints/FoodColor_Enum
+MRUItem3=/Game/Blueprints/BP_UI_HUD
+MRUItem4=/Game/Maps/GamePlay
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Font\" "
 Visual="\"Object.Appearance.Font\" "
-Object="\"Object.Appearance.Font\" "
+Object=
 CanvasPanel="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 
