add Snake Pody Parts Blueprint

--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,6 +121,7 @@ OpenAssetsAtExit=/Game/Blueprints/BP_UI_HUD.BP_UI_HUD
 OpenAssetsAtExit=/Game/Maps/GamePlay.GamePlay:PersistentLevel.GamePlay
 OpenAssetsAtExit=/Game/Blueprints/FoodColor_Enum.FoodColor_Enum
 OpenAssetsAtExit=/Game/Blueprints/BP_Food.BP_Food
+OpenAssetsAtExit=/Game/Blueprints/BP_Block.BP_Block
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1178,11 +1179,12 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Block
-MRUItem1=/Game/Blueprints/BP_Food
-MRUItem2=/Game/Blueprints/FoodColor_Enum
-MRUItem3=/Game/Blueprints/BP_UI_HUD
-MRUItem4=/Game/Maps/GamePlay
+MRUItem0=/Game/Blueprints/BP_SnakeBodyPaert
+MRUItem1=/Game/Blueprints/BP_Block
+MRUItem2=/Game/Blueprints/BP_Food
+MRUItem3=/Game/Blueprints/FoodColor_Enum
+MRUItem4=/Game/Blueprints/BP_UI_HUD
+MRUItem5=/Game/Maps/GamePlay
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
