Preparation for a main game loop

--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -122,6 +122,7 @@ OpenAssetsAtExit=/Game/Maps/GamePlay.GamePlay:PersistentLevel.GamePlay
 OpenAssetsAtExit=/Game/Blueprints/FoodColor_Enum.FoodColor_Enum
 OpenAssetsAtExit=/Game/Blueprints/BP_Food.BP_Food
 OpenAssetsAtExit=/Game/Blueprints/BP_Block.BP_Block
+OpenAssetsAtExit=/Game/Blueprints/BP_SnakeBodyPaert.BP_SnakeBodyPaert
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -247,6 +248,36 @@ BP_Block_C.Rendering=True
 BP_Block_C.Collision=True
 BP_Block_C.Actor=True
 BP_Block_C.Input=True
+BP_SnakeBodyPaert_C.Tick=True
+BP_SnakeBodyPaert_C.Replication=True
+BP_SnakeBodyPaert_C.Rendering=True
+BP_SnakeBodyPaert_C.Collision=True
+BP_SnakeBodyPaert_C.Actor=True
+BP_SnakeBodyPaert_C.Input=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.Navigation=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookComponent.Events=True
+BP_MainGame_C.TransformCommon=True
+BP_MainGame_C.Rendering=True
+BP_MainGame_C.Replication=True
+BP_MainGame_C.Collision=True
+BP_MainGame_C.Input=True
+BP_MainGame_C.Actor=True
+BP_MainGame_C.Tick=True
+BP_SnakeBodyPaert_C.Default=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1179,12 +1210,13 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_SnakeBodyPaert
-MRUItem1=/Game/Blueprints/BP_Block
-MRUItem2=/Game/Blueprints/BP_Food
-MRUItem3=/Game/Blueprints/FoodColor_Enum
-MRUItem4=/Game/Blueprints/BP_UI_HUD
-MRUItem5=/Game/Maps/GamePlay
+MRUItem0=/Game/Blueprints/BP_MainGame
+MRUItem1=/Game/Blueprints/BP_SnakeBodyPaert
+MRUItem2=/Game/Blueprints/BP_Block
+MRUItem3=/Game/Blueprints/BP_Food
+MRUItem4=/Game/Blueprints/FoodColor_Enum
+MRUItem5=/Game/Blueprints/BP_UI_HUD
+MRUItem6=/Game/Maps/GamePlay
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
@@ -1202,6 +1234,7 @@ PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.An
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_MainGame.BP_MainGame;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Sprites/GreyBackGround_Sprite.GreyBackground_Sprite;
 RecentlyPlaced=/Game/Sprites/Background_Sprite.Background_Sprite;
