Spawn a new Snake

--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -278,6 +278,9 @@ BP_MainGame_C.Input=True
 BP_MainGame_C.Actor=True
 BP_MainGame_C.Tick=True
 BP_SnakeBodyPaert_C.Default=True
+K2Node_VariableGet.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
