--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -281,6 +281,7 @@ BP_SnakeBodyPaert_C.Default=True
 K2Node_VariableGet.DefaultValueCategory=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+K2Node_VariableSet.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
