--- a/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Snake2D/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -282,6 +282,21 @@ K2Node_VariableGet.DefaultValueCategory=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 K2Node_VariableSet.Events=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+BP_SnakeBodyPart_C.Tick=True
+BP_SnakeBodyPart_C.Default=True
+BP_SnakeBodyPart_C.Replication=True
+BP_SnakeBodyPart_C.Rendering=True
+BP_SnakeBodyPart_C.Collision=True
+BP_SnakeBodyPart_C.Actor=True
+BP_SnakeBodyPart_C.Input=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+K2Node_SwitchInteger.PinOptions=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
